Removed minio binary, now work with minio-py
